--- a/workspace/css/style.css
+++ b/workspace/css/style.css
@@ -69,4 +69,29 @@ body{
     padding: 20px 40px;
     border-radius: 10px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
 }
+
+.content__card--circle{
+    width: 100px;
+    height: 100px;
+    background-color: #E5EFF5 ;
+    border-radius: 50%;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.content__card--icone{
+    width: 50px;
+}
+.content__card--title{
+    font-size: 32px;
+    margin: 0 0 8px;
+}
+.content__card--description{
+    color: #B4B4B4 ;
+    margin: 0;
+}
+
